tests/codegen/pass/027-do-while-typed-var.hyg
let mutable x = 0;
let y: int = do {
   x <- x +1
} while (x < 5);
assert(y = 5);

let mutable x = 0.0f;
let y: float = do {
    x <- x + 0.1f
} while (x < 0.5f);
assert(y = 0.5f)

